gitops/apps/igotify/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: igotify
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: igotify
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
